Add one blank line between lock entries to minimize merge conflicts (#1001)
Add one blank line between lock entries to minimize merge conflicts